--- a/trunk/DatasetWindow.xib
+++ b/trunk/DatasetWindow.xib
@@ -21,7 +21,7 @@
 		</object>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="457"/>
+			<integer value="269"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -456,7 +456,7 @@
 																	</object>
 																	<string key="NSFrame">{{0, 158}, {300, 26}}</string>
 																	<reference key="NSSuperview" ref="696982452"/>
-																	<string key="NSClassName">NSView</string>
+																	<string key="NSClassName">DivvyHeaderView</string>
 																</object>
 																<object class="NSCustomView" id="634147269">
 																	<reference key="NSNextResponder" ref="696982452"/>
@@ -566,7 +566,7 @@
 																	</object>
 																	<string key="NSFrame">{{0, 362}, {300, 26}}</string>
 																	<reference key="NSSuperview" ref="696982452"/>
-																	<string key="NSClassName">NSView</string>
+																	<string key="NSClassName">DivvyHeaderView</string>
 																</object>
 																<object class="NSCustomView" id="427877752">
 																	<reference key="NSNextResponder" ref="696982452"/>
@@ -662,7 +662,7 @@
 																	</object>
 																	<string key="NSFrame">{{0, 294}, {300, 26}}</string>
 																	<reference key="NSSuperview" ref="696982452"/>
-																	<string key="NSClassName">NSView</string>
+																	<string key="NSClassName">DivvyHeaderView</string>
 																</object>
 																<object class="NSCustomView" id="873270436">
 																	<reference key="NSNextResponder" ref="696982452"/>
@@ -765,7 +765,7 @@
 																	</object>
 																	<string key="NSFrame">{{0, 226}, {300, 26}}</string>
 																	<reference key="NSSuperview" ref="696982452"/>
-																	<string key="NSClassName">NSView</string>
+																	<string key="NSClassName">DivvyHeaderView</string>
 																</object>
 															</object>
 															<string key="NSFrameSize">{300, 388}</string>
@@ -3442,7 +3442,7 @@
 					</object>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<object class="NSAffineTransform">
-						<bytes key="NSTransformStruct">AQAAAABDMQAAA</bytes>
+						<bytes key="NSTransformStruct">AQAAAABDYgAAA</bytes>
 					</object>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>{{800, 479}, {245, 63}}</string>
@@ -3620,7 +3620,6 @@
 							<string>clustererView</string>
 							<string>datasetVisualizerArrayController</string>
 							<string>datasetVisualizerController</string>
-							<string>datasetVisualizerDisclosureButton</string>
 							<string>datasetVisualizerHeader</string>
 							<string>datasetVisualizerView</string>
 							<string>pointVisualizerArrayController</string>
@@ -3642,7 +3641,6 @@
 							<string>NSView</string>
 							<string>NSArrayController</string>
 							<string>NSObjectController</string>
-							<string>NSButton</string>
 							<string>NSView</string>
 							<string>NSView</string>
 							<string>NSArrayController</string>
@@ -3667,7 +3665,6 @@
 							<string>clustererView</string>
 							<string>datasetVisualizerArrayController</string>
 							<string>datasetVisualizerController</string>
-							<string>datasetVisualizerDisclosureButton</string>
 							<string>datasetVisualizerHeader</string>
 							<string>datasetVisualizerView</string>
 							<string>pointVisualizerArrayController</string>
@@ -3706,10 +3703,6 @@
 							<object class="IBToOneOutletInfo">
 								<string key="name">datasetVisualizerController</string>
 								<string key="candidateClassName">NSObjectController</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">datasetVisualizerDisclosureButton</string>
-								<string key="candidateClassName">NSButton</string>
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">datasetVisualizerHeader</string>
@@ -3888,6 +3881,14 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">DivvyFlippedView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">DivvyHeaderView</string>
+					<string key="superclassName">NSView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">DivvyHeaderView.h</string>
 					</object>
 				</object>
 			</object>
