--- a/DatasetWindow.xib
+++ b/DatasetWindow.xib
@@ -21,7 +21,7 @@
 		</object>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="269"/>
+			<integer value="36"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -3311,6 +3311,7 @@
 					<string>296.IBPluginDependency</string>
 					<string>297.IBPluginDependency</string>
 					<string>299.IBPluginDependency</string>
+					<string>3.CustomClassName</string>
 					<string>3.IBPluginDependency</string>
 					<string>3.IBViewBoundsToFrameTransform</string>
 					<string>300.IBPluginDependency</string>
@@ -3456,6 +3457,7 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>DivvyImageBrowserView</string>
 					<string>com.apple.imagekit.ibplugin</string>
 					<object class="NSAffineTransform">
 						<bytes key="NSTransformStruct">AUIoAADCsgAAA</bytes>
@@ -3786,7 +3788,7 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>DivvyDatasetViewPanel</string>
 							<string>NSArrayController</string>
-							<string>IKImageBrowserView</string>
+							<string>DivvyImageBrowserView</string>
 							<string>DivvyDatasetsPanel</string>
 						</object>
 					</object>
@@ -3811,7 +3813,7 @@
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">datasetViewsBrowser</string>
-								<string key="candidateClassName">IKImageBrowserView</string>
+								<string key="candidateClassName">DivvyImageBrowserView</string>
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">datasetsPanel</string>
@@ -3889,6 +3891,14 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">DivvyHeaderView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">DivvyImageBrowserView</string>
+					<string key="superclassName">IKImageBrowserView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">DivvyImageBrowserView.h</string>
 					</object>
 				</object>
 			</object>
